# CS-160-Project

./: .gitignore  Explanation for Not Stroing 68 points in Database.docx  Explanation for Not Stroing 68 points in Database.md  README.md  dLibLandmarks.cpp  main.cpp  main.h  openCVDrawing.cpp
CS-160-Project/: CMakeLists.txt  README.md  dLibLandmarks.cpp  findEyeCenter.cpp  frameRateTemp.txt  main.cpp  main.h  openCVDrawing.cpp  pipeline  processPipeline.cpp
teamone/: .gitignore  README.md  index.php
teamone/about/: index.php
teamone/css/: teamone.less
teamone/err/: 404.php
teamone/init/: initialize.sql  thescript.sql
teamone/js/: teamone.js
teamone/php/: StandardPage.php  authenticate.php  delete_account.php  logout.php  modify_video.php  process_video.php  settings_update.php  signup.php  upload.php
teamone/removal_success/: index.php
teamone/settings/: index.php
teamone/settings/settings_popup/: delete_account.html  success.html  update_email.html  update_first.html  update_last.html  update_password.html
teamone/signup/: body.html  success.html  verify.html
teamone/upload/: details_prompt.html  upload_and_process.html
teamone/video_settings/: delete_video.html  rename_video.html  success.html
